Fixed layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -235,10 +235,11 @@ background-repeat: no-repeat;
       
   }
   .modal-content {
-      width: 610px;
-      height: 900px;
+      width: 640px;
+      height: 920px;
       background-color: #082349 !important;
       margin: 0 auto;
+      justify-content: center;
   }
 
   .modal-backdrop {
@@ -357,8 +358,8 @@ horarios{
     }
 
     .modal-content {
-      width: 300px;
-      height: 420px;
+      width: 340px;
+      height: 500px;
       background-color: #082349 !important;
       margin: 0 auto;
   }
